syntax = "proto3";

option csharp_namespace = "Rebate.GRPC.Protos";

service RebateProtoService{
	rpc CreateDiscount (CData) returns (CouponModel);
	rpc GetDiscount (ProductName) returns (CouponModel);
	rpc EditDiscount (CData) returns (CouponModel);
	rpc DeleteDiscount (ProductName) returns (StatusMessage);
}

message ProductName{
	string Name = 1;
}
message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}
message StatusMessage {
	string status = 1;
}
message CData{
	CouponModel coupon = 1;
}